--- a/RankCalculator/RankCalculator.csproj
+++ b/RankCalculator/RankCalculator.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Valuator\Valuator.csproj" />
     <PackageReference Include="NATS.Client" Version="0.12.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
   </ItemGroup>
