--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+nginx/*
+!nginx/conf
+nginx/conf/*
+!nginx/conf/nginx.conf
